# tpe_nlp_2025

./: README.md  clickbait_analysis.ipynb  clickbait_detection.py  comparacion_final.py  demo.py  download_dataset.py  eda.py  experimento1.py  experimento2.py  experimento3.py  experimentos.ipynb  experimentos_clickbait.ipynb  experimentos_colab.ipynb  main.py  pyproject.toml  requirements.txt  resumen_y_conclusiones.py  setup_uv.py
viejo/: README_UV.md  analisis.py  clickbait_analysis.ipynb  clickbait_experiments.ipynb  embeddings_experiment.py  pyproject.toml  setup.py
