[project]
name = "clickbait-detection"
version = "1.0.0"
description = "Detección automática de titulares clickbait en noticias digitales"
authors = [
    {name = "Proyecto NLP TPE 2025"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas>=2.0.3",
    "numpy>=1.24.3",
    "scikit-learn>=1.3.0",
    "nltk>=3.8.1",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "wordcloud>=1.9.2",
    "jupyter>=1.0.0",
    "tqdm>=4.65.0",
]

[project.optional-dependencies]
embeddings = [
    "transformers>=4.33.2",
    "torch>=2.0.1",
    "datasets>=2.14.4",
    "gensim>=4.3.0",
]
kaggle = [
    "kaggle>=1.5.16",
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
clickbait-demo = "demo:main"
clickbait-setup = "setup:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
