[project]
name = "tpe-nlp-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "nltk>=3.9.2",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyside6>=6.10.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
embeddings = [
    "gensim>=4.0.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
]

[tool.black]
line-length = 180
